Add support for header events (version, jvm options, memory).